test/sema/typeck/trait/generic-assoc-type-where-clause-missing.dora
trait Foo {
    fn foo(): Int64;
}

trait Container {
    type Item[T] where Vec[T]: Foo;
}

class Bar

impl Container for Bar {
    type Item[T] = Option[T];
}
